--- a/2022/2022-01-11/analysis_2022-01-11.Rmd
+++ b/2022/2022-01-11/analysis_2022-01-11.Rmd
@@ -335,7 +335,7 @@ for_plotting %>%
   NULL
 
 # Saving the graph
-ggsave(filename = 'bees.pdf', width = 7, height = 4)
+ggsave(filename = 'final_graph.pdf', width = 7, height = 4)
 
 ```
 
