--- a/2022/2022-08-30/analysis_2022-08-30.Rmd
+++ b/2022/2022-08-30/analysis_2022-08-30.Rmd
@@ -12,9 +12,7 @@ editor_options:
 library(tidyverse)
 library(ggthemes)
 library(showtext)
-library(readxl)
-library(ggHoriPlot)
-library('geofacet')
+library(geofacet)
 library(ggrepel)
 showtext_auto(enable = TRUE)
 font_add_google("Source Sans Pro")
